hard-gists/833151/run.log
=== Docker Run Log for 833151 ===
Started at: Mi 29. Okt 17:43:17 CET 2025

[2025-10-29 17:43:18] START: Running container for 833151
[2025-10-29 17:43:18] SUCCESS: Container e6d9516650fb253d2c5a6e61701415ebbf09dc1b16eccc12918cd0b08f14e2f3 started for 833151
=== Container logs for 833151 ===
  File "/snippet.py", line 52
    print "Washington, D.C. -> Chicago -> San Francisco:"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 833151 ===
[2025-10-29 17:43:20] INFO: Container e6d9516650fb253d2c5a6e61701415ebbf09dc1b16eccc12918cd0b08f14e2f3 has stopped
